commit: feat: adicionei algumas funcionalidades de tentativas mostra quantas vezes usuario tentou jogar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div>
     <div class="container" >
       <h1 class="h1">Game Numero Secreto </h1>
-      <h3><br> Bora Jogar : escolha numero entre 1 e 40</h3>
+      <h3 class="subtitle"><br> Bora Jogar : escolha numero entre 1 e 40</h3>
       <p><img src="SVGRepo_iconCarrier.svg" alt="" class="icone"></p>
       <button class="button">Start</button>
       <div class="modal">
