style: :hammer: modificando texto dos buttons

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -39,8 +39,8 @@
                 Apenas letras e sem acento.
               </span>
               <div class="main-container-button">
-                <button class="button button-crypt" type="submit" value="Enviar">Enviar</button>
-                <button class="button button-descrypt" type="submit" value="Enviar">Enviar</button>
+                <button class="button button-crypt" type="submit" value="Enviar">Criptografar</button>
+                <button class="button button-descrypt" type="submit" value="Enviar">Descriptografar</button>
               </div>
             </div>
           </div>
