feat: :hammer: implamentei uma animação

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -47,7 +47,14 @@
           
         </div>
         <div class="area-encrypted ">
-          <img src="/assets/High quality products 1 1.svg" alt="logo">       
+          <div class="eyes">
+            <div>
+              <i></i>
+            </div>
+            <div>
+              <i></i>
+            </div>
+          </div>
           <div class="area-encrypted-content">
             <h3 class="area-encrypted-title">Nenhuma mensagem encontrada</h3>
 
