fix: :bug: correção no layout da area de cripografia

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -49,7 +49,7 @@
         <div class="area-encrypted ">
           <div class="eyes">
             <div>
-              <i></i>
+              <i class="retina"></i>
             </div>
             <div>
               <i></i>
@@ -78,8 +78,8 @@
               <a href="https://www.instagram.com/_garcialuk/?fbclid=IwZXh0bgNhZW0CMTAAAR2qMtl-k1qqm7nan9ojScJXxyfANYfOYVnUeDOvPtHndQy9-LiRxqm71hg_aem_P-RZCuT2BLxaBV1ZLLms5A" target="_blank" class="footer-social">
                 <i class="uil uil-instagram button-icone"></i>
               </a>
-              <a href="https://wa.link/i3xug3" target="_blank" class="footer-social">
-                <i class="uil uil-whatsapp button-icone"></i>
+              <a href="https://github.com/Lucasgarcc" target="_blank" class="footer-social">
+                <i class="uil uil-github-alt button-icone"></i>
               </a>    
             </div>
               </div>
