fix: :bug: continuedade na correção do layout da area de cripografia em geral mobile

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -27,7 +27,7 @@
       <div class="main-container grid" >
         
         <div class="main-content ">
-          <div>
+          <div class="main-content-info">
                <span class="logo-main"><img src="/assets/logo.svg" alt="logo"></span>
           <h1 class="main-title">Decodificador <strong>e</strong> Criptografia<span class="detail-description">.</span></h1>
           </div>
