test: :rotating_light: teste de animação adpitação mobile, modificação no html,css e javascript

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -46,6 +46,14 @@
           </div>
         </div>
         <div class="area-encrypted ">
+          <div id="wrapper" class="wrapper">
+            <div id="eye1" class="eye">
+              <div class="pupil"></div>
+            </div>
+            <div id="eye2" class="eye">
+              <div class="pupil"></div>
+            </div>
+          </div>
           <div class="eyes">
             <div>
               <i></i>
