--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -28,8 +28,7 @@
         
         <div class="main-content ">
           <div class="main-content-info">
-               <span class="logo-main"><img src="/assets/logo.svg" alt="logo"></span>
-          <h1 class="main-title">Decodificador <strong>e</strong> Criptografia<span class="detail-description">.</span></h1>
+          <h1 class="main-title">Decodificador<span class="detail-description">.</span></h1>
           </div>
           <textarea  class="main-description"class="textarea"  rows="4" cols="50" name="message" id="message" placeholder="Digite Seu texto"></textarea>
           <div class="main-box">
