refactor: :hammer: modificação e alteração no HTML, CSS e JavaScript

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Descripto</title>
-  <meta name="description" content="Faça login na nossa plataforma">
+  <meta name="description" content="chanllenge One next Dev Garcia">
   <meta name="keywords" content="login, autenticação, plataforma, usuário, senha">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
@@ -30,12 +30,12 @@
           <div class="main-content-info">
           <h1 class="main-title">Decodificador<span class="detail-description">.</span></h1>
           </div>
-          <textarea  class="main-description"class="textarea"  rows="4" cols="50" name="message" id="message" placeholder="Digite Seu texto"></textarea>
+          <textarea  class="main-description"class="textarea"  rows="4" cols="50" name="message" id="message" placeholder="Digite uma frase"></textarea>
           <div class="main-box">
             <div>
               <span class="main-box-alert">
-                <i class="uil uil-info-circle"></i>
-                Apenas letras e sem acento.
+                <i class="uil uil-info-circle alert"></i>
+                Apenas minúsculas letras e sem acento.
               </span>
               <div class="main-container-button">
                 <button class="button button-crypt" type="submit" value="Enviar">Criptografar</button>
