style: :art: correção texto do botão enviar mensagem no Html

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -65,7 +65,7 @@
             <h3 class="area-encrypted-title">Nenhuma mensagem encontrada</h3>
 
           </div>
-            <button class="button-message" type="submit" value="Enviar">Enviar Menssagem</button>
+            <button class="button-message" type="submit" value="Enviar">Enviar Mensagem</button>
         </div>
       </div>
     </section>
