feat: :hammer: definindo nova funcionalidade de limpar a mensagem descriptografada no Javascript e alterando texto HTML

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -30,7 +30,7 @@
           <div class="main-content-info">
           <h1 class="main-title">Decodificador<span class="detail-description">.</span></h1>
           </div>
-          <textarea  class="main-description"class="textarea"  rows="4" cols="50" name="message" id="message" placeholder="Digite uma frase"></textarea>
+          <textarea  class="main-description"class="textarea"  rows="4" cols="50" name="message" id="message" placeholder="Digite uma frase para criptografar"></textarea>
           <div class="main-box">
             <div>
               <span class="main-box-alert">
