feat: :hammer: refatorando me melhorando a validação do input no Javascript e adicionando novos elementos HTML

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -38,8 +38,12 @@
                 Apenas minúsculas letras e sem acento.
               </span>
               <div class="main-container-button">
-                <button class="button button-crypt" type="submit" value="Enviar">Criptografar</button>
-                <button class="button button-descrypt" type="submit" value="Enviar">Descriptografar</button>
+                <button class="button button-crypt" type="submit" value="Enviar">
+                  <i class="uil uil-lock"></i>
+                  Criptografar</button>
+                <button class="button button-descrypt" type="submit" value="Enviar">
+                  <i class="uil uil-unlock"></i>
+                  Descriptografar</button>
               </div>
             </div>
           </div>
@@ -65,7 +69,10 @@
             <h3 class="area-encrypted-title">Nenhuma mensagem encontrada</h3>
 
           </div>
-            <button class="button-message" type="submit" value="Enviar">Enviar Mensagem</button>
+            <button class="button-message" type="submit" value="Enviar">
+              <i class="uil uil-message"></i> 
+              Enviar Mensagem
+            </button>
         </div>
       </div>
     </section>
