--- a/game-secreto/index.html
+++ b/game-secreto/index.html
@@ -9,10 +9,10 @@
     </style>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
   <title>Game</title>
-   <link rel="stylesheet" href="./assets/css/style.css">
+   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <script defer type="text/javascript" src="assets/js/app.js"></script>
+  <script defer type="text/javascript" src="js/app.js"></script>
   <div>
     <div class="container" >
       <h1 class="h1">Game Numero Secreto </h1>
