update: :zap: Ajuste geral  HTML, CSS e JavaScript

--- a/chanllenge Encriptador/index.html
+++ b/chanllenge Encriptador/index.html
@@ -93,7 +93,7 @@
               </a>    
             </div>
               </div>
-             <span class="footer-copy">&#169; Desenolvido por Lucas Garcia </span>  
+             <span class="footer-copy">&#169; Desenvolvido por Lucas Garcia </span>  
  
             </div>
           </footer>
